<resources>
    <string name="app_name">Football</string>
    <string name="title">TITLE</string>
    <string name="games">G</string>
    <string name="wins">W</string>
    <string name="draws">D</string>
    <string name="loses">L</string>
    <string name="scored">S</string>
    <string name="conseded">C</string>
    <string name="difference">+/-</string>
    <string name="points">P</string>
    <string name="noInternetConnection">No Internet Connection</string>
    <string name="infoRefreshed">Info Refreshed From Network</string>
    <string name="noInfo">There is not info for this competition</string>
    <string name="currentMatchDay">"Current Matchday "</string>
    <string name="numberOfTeams">"Number Of Teams "</string>
    <string name="LastUpdate">"Last Updated "</string>
    <string name="noData">There\'s no any data from server</string>
    <string-array name="groups">
        <item>Group A</item>
        <item>Group B</item>
        <item>Group C</item>
        <item>Group D</item>
        <item>Group E</item>
        <item>Group F</item>
        <item>Group G</item>
        <item>Group H</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
