<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/item"
    app:cardCornerRadius="1dp"
    app:cardBackgroundColor="@color/header">

    <LinearLayout
        style="@style/item"
        android:orientation="horizontal">

        <TextView
            style="@style/table_item_title"
            android:text="@string/title"
            />

        <TextView
            style="@style/table_header_attr"
            android:text="@string/games" />

        <TextView
            style="@style/table_header_attr"
            android:text="@string/scored" />

        <TextView
            style="@style/table_header_attr"
            android:text="@string/conseded" />

        <TextView
            style="@style/table_header_attr"
            android:text="@string/difference" />

        <TextView
            style="@style/table_header_attr"
            android:text="@string/points" />
    </LinearLayout>

</android.support.v7.widget.CardView>